--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
   },
   "main": "background.js",
   "dependencies": {
-    "axios": "^1.9.0",
+    "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "date-fns": "^4.1.0",
+    "echarts": "^5.6.0",
     "element-plus": "^2.9.8",
     "pinia": "^3.0.2",
     "vue": "^3.2.13",
