--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "electron-devtools-installer": "^3.1.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "nodemon": "^3.1.10",
     "vue-cli-plugin-electron-builder": "~2.1.1"
   },
   "eslintConfig": {
